<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/tlo" 
	android:orientation="horizontal"
	android:padding="30dip" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/glowny_tytul" 
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:textSize="24.5sp"/>
		<Button
			android:id="@+id/przycisk_kontynuacja" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/etykieta_kontynuacja" />
		<Button
			android:id="@+id/przycisk_nowa_gra" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/etykieta_nowa_gra" />
		<Button 
			android:id="@+id/przycisk_informacje"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/etykieta_informacje" />
		<Button
			android:id="@+id/przycisk_wyjscie" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/etykieta_wyjscie" />
	</LinearLayout>
</LinearLayout>
